// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: 16px;
  height: 44px;
  padding: 10px 12px;
  outline: none;
  width: 100%;
  margin-top: 5px;
}

.c1[disabled] {
  background-color: #f2f2f2;
  color: #999999;
  cursor: not-allowed;
  border-color: #999999;
  box-shadow: none;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 1px 6px 0 rgba(19,85,208,0.5);
}

.c1:focus + .c3 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  -webkit-text-fill-color: #4c4c4c;
  -webkit-box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  top: 45px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue="foo"
    disabled={false}
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    type="text"
  />
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 c2"
    onClick={[Function]}
    style={
      Object {
        "color": "",
      }
    }
  >
    cancel
  </span>
  
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
.c2 {
  cursor: pointer;
  display: block;
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 5px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: text;
  font-size: 16px;
  margin-bottom: 0;
  padding: 8px 12px 0px 12px;
  font-weight: bold;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c3 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: 16px;
  height: 44px;
  padding: 10px 12px;
  outline: none;
  width: 100%;
  margin-top: 5px;
}

.c3[disabled] {
  background-color: #f2f2f2;
  color: #999999;
  cursor: not-allowed;
  border-color: #999999;
  box-shadow: none;
}

.c3::-webkit-calendar-picker-indicator {
  display: none;
}

.c3:focus {
  border-color: #1355d0;
  box-shadow: 0 1px 6px 0 rgba(19,85,208,0.5);
}

.c3:focus + .c1 {
  color: #03a9f4;
}

.c3:-webkit-autofill {
  -webkit-text-fill-color: #4c4c4c;
  -webkit-box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c5:focus + .c1 {
  color: #03a9f4;
}

.c4 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  top: 45px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  <label
    className="c1 c2"
    htmlFor="input-with-label"
  >
    Text label
  </label>
  
  <input
    className="c3"
    defaultValue="foo"
    disabled={false}
    id="input-with-label"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    type="text"
  />
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 c4"
    onClick={[Function]}
    style={
      Object {
        "color": "",
      }
    }
  >
    cancel
  </span>
  
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
.c1 {
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: transparent;
  border: none;
  border-radius: 4px;
  border: 1.5px solid #999999;
  box-sizing: border-box;
  color: #4c4c4c;
  font-size: 16px;
  height: 44px;
  padding: 10px 12px;
  outline: none;
  width: 100%;
  margin-top: 5px;
  border-color: #ff2d4d;
}

.c1[disabled] {
  background-color: #f2f2f2;
  color: #999999;
  cursor: not-allowed;
  border-color: #999999;
  box-shadow: none;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 1px 6px 0 rgba(19,85,208,0.5);
}

.c1:focus + .c4 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  -webkit-text-fill-color: #4c4c4c;
  -webkit-box-shadow: 0 0 0px 1000px #e5edfc inset;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  top: 45px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

.c3 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  padding: 8px 12px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue="foo"
    disabled={false}
    id=""
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    type="text"
  />
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 c2"
    onClick={[Function]}
    style={
      Object {
        "color": "",
      }
    }
  >
    cancel
  </span>
  <div
    className="c3"
  >
    Error message
  </div>
  
</div>
`;
